--- a/tictacttoe/index.css
+++ b/tictacttoe/index.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: black;
     color: fuchsia;
+    font-family: 'Rock Salt', cursive;
 }
 
 h1 {
